# FnckSQL

./: .gitignore  Cargo.toml  Dockerfile  README.md  README_ZH.md  rust-toolchain  rust-toolchain.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  question.md
.github/workflows/: ci.yml
benchmarks/: query_benchmark.rs
docs/: features.md
examples/: hello_world.rs  transaction.rs
fnck_sql_serde_macros/: Cargo.toml
fnck_sql_serde_macros/src/: lib.rs  reference_serialization.rs
kip_macro/: Cargo.toml
kip_macro/src/: lib.rs
serde_macros/: Cargo.toml
src/: db.rs  errors.rs  lib.rs  main.rs
src/binder/: aggregate.rs  alter_table.rs  analyze.rs  copy.rs  create.rs  create_index.rs  create_table.rs  create_view.rs  delete.rs  describe.rs  distinct.rs  drop_table.rs  drop_view.rs  explain.rs  expr.rs  insert.rs  mod.rs  select.rs  show.rs  truncate.rs  update.rs
src/binder/statement/: create_table.rs  mod.rs  select.rs
src/catalog/: column.rs  column_catalog.rs  database.rs  mod.rs  root.rs  schema.rs  table.rs  table_catalog.rs  view.rs
src/execution/: executor.rs  executor_graph.rs  executor_task.rs  marco.rs  mod.rs
src/execution/codegen/: marcos.rs  mod.rs
src/execution/ddl/: add_column.rs  create_index.rs  create_table.rs  create_view.rs  drop_column.rs  drop_table.rs  drop_view.rs  mod.rs  truncate.rs
src/execution/dml/: analyze.rs  copy_from_file.rs  copy_to_file.rs  delete.rs  insert.rs  mod.rs  update.rs
src/execution/dql/: describe.rs  dummy.rs  explain.rs  filter.rs  function_scan.rs  index_scan.rs  limit.rs  mod.rs  projection.rs  seq_scan.rs  show_table.rs  sort.rs  union.rs  values.rs
src/execution/executor/: mod.rs
src/execution/parallel/: meta_pipeline.rs  mod.rs  pipeline.rs  pipeline_builder.rs  pipeline_complete_event.rs  pipeline_event.rs  pipeline_finish_event.rs  pipeline_initialize_event.rs  pipeline_running_event.rs
src/execution/physical/: mod.rs  physical_filter.rs  physical_hash_join.rs  physical_join.rs  physical_merge_join.rs  physical_plan_builder.rs  physical_projection.rs  physical_result_collector.rs  physical_topn.rs
src/execution/physical_plan/: mod.rs  physical_create_table.rs  physical_delete.rs  physical_filter.rs  physical_hash_join.rs  physical_insert.rs  physical_limit.rs  physical_plan_mapping.rs  physical_projection.rs  physical_sort.rs  physical_table_scan.rs  physical_update.rs
src/execution/runtime/: mod.rs  thread.rs
src/execution/volcano/: mod.rs
src/execution/volcano_executor/: create_table.rs  filter.rs  insert.rs  limit.rs  mod.rs  projection.rs  sort.rs  table_scan.rs  values.rs
src/execution_ap/: mod.rs
src/execution_ap/physical_plan/: mod.rs  physical_filter.rs  physical_hash_join.rs  physical_insert.rs  physical_limit.rs  physical_plan_mapping.rs  physical_projection.rs  physical_sort.rs  physical_values.rs
src/execution_ap/volcano_executor/: create_table.rs  filter.rs  insert.rs  limit.rs  mod.rs  projection.rs  sort.rs  table_scan.rs  values.rs
src/execution_tp/: mod.rs
src/execution_tp/executor/: mod.rs
src/execution_v1/: mod.rs
src/execution_v1/physical_plan/: mod.rs  physical_agg.rs  physical_create_table.rs  physical_filter.rs  physical_hash_join.rs  physical_insert.rs  physical_limit.rs  physical_plan_builder.rs  physical_plan_mapping.rs  physical_projection.rs  physical_sort.rs  physical_table_scan.rs  physical_values.rs
src/execution_v1/volcano_executor/: agg.rs  create_table.rs  filter.rs  hash_join.rs  insert.rs  limit.rs  mod.rs  projection.rs  sort.rs  table_scan.rs  values.rs
src/executor/: execute_runtime.rs  executor_graph.rs  executor_task.rs  mod.rs
src/executor/parallel/: meta_pipeline.rs  mod.rs  pipeline.rs  pipeline_builder.rs  pipeline_event.rs  pipeline_executor.rs
src/executor/physical/: mod.rs  (+7 more)
src/expression/: agg.rs  array_compute.rs  cast.rs  evaluator.rs  function.rs  index.rs  mod.rs  range_detacher.rs  simplify.rs  value_compute.rs
src/function/: char_length.rs  characterlength.rs  charlength.rs  current_date.rs  lower.rs  mod.rs  numbers.rs  upper.rs
src/macros/: mod.rs
src/marco/: mod.rs
src/marcos/: mod.rs
src/optimizer/: mod.rs
src/parser/: mod.rs  rs_parser.rs
src/planner/: display.rs  logical_create_table_plan.rs  logical_insert_plan.rs  logical_plan_builder.rs  logical_select_plan.rs  mod.rs
src/serdes/: alias_type.rs  binary_operator.rs  boolean.rs  bound.rs  char.rs  char_length_units.rs  column.rs  data_value.rs  evaluator.rs  function.rs  hasher.rs  logic_type.rs  mod.rs  num.rs  option.rs  pair.rs  path_buf.rs  phantom.rs  ptr.rs  scala_expression.rs  scala_function.rs  slice.rs  string.rs  table_function.rs  trim.rs  ulid.rs  unary_operator.rs  vec.rs
src/storage/: kip.rs  kipdb.rs  memory.rs  mod.rs  rocksdb.rs  table_codec.rs
src/storage_ap/: memory.rs  mod.rs
src/storage_tp/: memory.rs  mod.rs
src/types/: bool_type.rs  errors.rs  index.rs  mod.rs  numeric_types.rs  tuple.rs  tuple_builder.rs  value.rs
src/udf/: current_date.rs  mod.rs
src/util/: hash_utils.rs  mod.rs
src/utils/: bit_vector.rs  lru.rs  mod.rs
tests/data/: copy.tbl
tests/macros-test/: Cargo.toml
tests/macros-test/src/: main.rs
tests/slt/: aggregation.slt  alter_table.slt  analyze.slt  basic_test.slt  bigint.slt  char.slt  copy.slt  count.slt  create.slt  create_index.slt  create_table.slt  decimal  delete.slt  delete_multiple_primary_keys.slt  describe.slt  distinct.slt  dummy.slt  explain.slt.reference  filter.slt  filter_null.slt  group_by.slt  having.slt  insert.slt  insert_multiple_primary_keys.slt  insert_table.slt  join.slt  join_left_inner.slt  limit.slt  order_by.slt  projection.slt  select.slt  select_into.slt  subquery.slt  substring  substring.slt  tuple  tuple.slt  union  union.slt  update  (+5 more)
tests/sqllogictest/: Cargo.toml
tests/sqllogictest/src/: lib.rs  main.rs
tests/sqllogictest/tests/: sqllogictest.rs
tpcc/: Cargo.toml  README.md
tpcc/src/: README.md  delivery.rs  load.rs  main.rs  new_ord.rs  order_stat.rs  payment.rs  rt_hist.rs  slev.rs  utils.rs
(+345 files in other folders)
