# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name        = "fnck_sql"
version     = "0.0.1-alpha.14"
edition     = "2021"
authors     = ["Kould <kould2333@gmail.com>", "Xwg <loloxwg@gmail.com>"]
description = "SQL as a Function for Rust"
license     = "Apache-2.0"
repository  = "https://github.com/KipData/KipSQL"
readme      = "README.md"
keywords    = ["async", "sql", "sqlite", "database", "mysql"]
categories  = ["development-tools", "database"]
default-run = "fnck_sql"

[[bin]]
name              = "fnck_sql"
path              = "src/bin/server.rs"
required-features = ["net"]

[lib]
doctest = false

[features]
default = ["marcos", "net"]
marcos  = []
net     = ["dep:pgwire", "dep:async-trait", "dep:env_logger", "dep:log"]

[[bench]]
name    = "query_bench"
path    = "benchmarks/query_benchmark.rs"
harness = false

[dependencies]
ahash                 = { version = "0.8.11" }
async-lock            = { version = "3.3.0" }
async-trait           = { version = "0.1.77", optional = true }
bincode               = { version = "1.3.3" }
bytes                 = { version = "1.5.0" }
chrono                = { version = "0.4.26" }
clap                  = { version = "4.5.2" }
comfy-table           = { version = "7.1.0" }
csv                   = { version = "1.3.0" }
dirs                  = { version = "5.0.1" }
env_logger            = { version = "0.11.3", optional = true }
futures               = { version = "0.3.30" }
futures-async-stream  = { version = "0.2.10" }
integer-encoding      = { version = "3.0.4" }
itertools             = { version = "0.12.1" }
kip_db                = { version = "0.1.2-alpha.25.fix2" }
lazy_static           = { version = "1.4.0" }
log                   = { version = "0.4.21", optional = true }
ordered-float         = { version = "4.2.0" }
petgraph              = { version = "0.6.4" }
pgwire                = { version = "0.19.2", optional = true }
rand                  = { version = "0.9.0-alpha.0" }
regex                 = { version = "1.10.3" }
rust_decimal          = { version = "1.34.3" }
serde                 = { version = "1.0.197", features = ["derive", "rc"] }
siphasher             = { version = "1.0.0", features = ["serde"] }
sqlparser             = { version = "0.34.0" }
strum_macros          = { version = "0.26.2" }
thiserror             = { version = "1.0.58" }
tokio                 = { version = "1.36.0", features = ["full"] }
tracing               = { version = "0.1.40" }

[dev-dependencies]
cargo-tarpaulin       = { version = "0.27.1" }
criterion             = { version = "0.5.1", features = ["async_tokio", "html_reports"] }
indicatif             = { version = "0.17.8" }
rand_distr            = { version = "0.4.3" }
tempfile              = { version = "3.10.1" }
tokio-test            = { version = "0.4.3" }
# Benchmark
sqlite                = { version = "0.34.0" }

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }

[workspace]
members = [
  "tests/sqllogictest",
]