# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name        = "fnck_sql"
version     = "0.0.1-alpha.15"
edition     = "2021"
authors     = ["Kould <kould2333@gmail.com>", "Xwg <loloxwg@gmail.com>"]
description = "SQL as a Function for Rust"
license     = "Apache-2.0"
repository  = "https://github.com/KipData/KipSQL"
readme      = "README.md"
keywords    = ["sql", "sqlite", "database", "mysql"]
categories  = ["development-tools", "database"]
default-run = "fnck_sql"

[lib]
doctest = false

[features]
default = ["marcos"]
marcos  = []

[[bench]]
name    = "query_bench"
path    = "benchmarks/query_benchmark.rs"
harness = false

[dependencies]
ahash                 = { version = "0.8" }
bincode               = { version = "1" }
bytes                 = { version = "1" }
chrono                = { version = "0.4" }
clap                  = { version = "4" }
comfy-table           = { version = "7" }
csv                   = { version = "1" }
dirs                  = { version = "5" }
integer-encoding      = { version = "3" }
itertools             = { version = "0.12" }
lazy_static           = { version = "1" }
ordered-float         = { version = "4" }
paste                 = { version = "1" }
parking_lot           = { version = "0.12", features = ["arc_lock"] }
petgraph              = { version = "0.6" }
rand                  = { version = "0.9.0-alpha" }
regex                 = { version = "1" }
rocksdb               = { git = "https://github.com/rust-rocksdb/rust-rocksdb", rev = "1cf906dc4087f06631820f13855e6b27bd21b972" }
rust_decimal          = { version = "1" }
serde                 = { version = "1", features = ["derive", "rc"] }
siphasher             = { version = "1", features = ["serde"] }
sqlparser             = { version = "0.34", features = ["serde"] }
strum_macros          = { version = "0.26.2" }
thiserror             = { version = "1" }
tracing               = { version = "0.1" }
typetag               = { version = "0.2" }

[dev-dependencies]
cargo-tarpaulin       = { version = "0.27" }
criterion             = { version = "0.5", features = ["async_tokio", "html_reports"] }
indicatif             = { version = "0.17" }
rand_distr            = { version = "0.4" }
tempfile              = { version = "3.10" }
# Benchmark
sqlite                = { version = "0.34" }

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }

[workspace]
members = [
  "tests/sqllogictest",
]