# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name          = "fnck_sql"
version       = "0.0.8"
edition       = "2021"
authors       = ["Kould <kould2333@gmail.com>", "Xwg <loloxwg@gmail.com>"]
description   = "SQL as a Function for Rust"
documentation = "https://docs.rs/fnck_sql/latest/fnck_sql/"
license       = "Apache-2.0"
repository    = "https://github.com/KipData/KipSQL"
readme        = "README.md"
keywords      = ["sql", "sqlite", "database", "mysql"]
categories    = ["development-tools", "database"]
default-run   = "fnck_sql"

[[bin]]
name              = "fnck_sql"
path              = "src/bin/server.rs"
required-features = ["net"]

[lib]
doctest = false

[features]
default = ["macros"]
macros  = []
net     = ["dep:pgwire", "dep:async-trait", "dep:clap", "dep:env_logger", "dep:futures", "dep:log", "dep:tokio"]

[[bench]]
name    = "query_bench"
path    = "benchmarks/query_benchmark.rs"
harness = false

[dependencies]
ahash                 = { version = "0.8" }
bincode               = { version = "1" }
bytes                 = { version = "1" }
chrono                = { version = "0.4" }
comfy-table           = { version = "7" }
csv                   = { version = "1" }
encode_unicode        = { version = "1" }
dirs                  = { version = "5" }
itertools             = { version = "0.12" }
ordered-float         = { version = "4" }
paste                 = { version = "1" }
parking_lot           = { version = "0.12", features = ["arc_lock"] }
petgraph              = { version = "0.6" }
regex                 = { version = "1" }
rocksdb               = { version = "0.22" }
rust_decimal          = { version = "1" }
serde                 = { version = "1", features = ["derive", "rc"] }
fnck_sql_serde_macros = { version = "0.1.0", path = "fnck_sql_serde_macros" }
siphasher             = { version = "1", features = ["serde"] }
sqlparser             = { version = "0.34", features = ["serde"] }
thiserror             = { version = "1" }
typetag               = { version = "0.2" }
ulid                  = { version = "1", features = ["serde"] }

# Feature: net
async-trait           = { version = "0.1", optional = true }
clap                  = { version = "4.5", features = ["derive"], optional = true }
env_logger            = { version = "0.11", optional = true }
futures               = { version = "0.3", optional = true }
log                   = { version = "0.4", optional = true }
pgwire                = { version = "0.19", optional = true }
tokio                 = { version = "1.36", features = ["full"], optional = true }


[dev-dependencies]
cargo-tarpaulin       = { version = "0.27" }
criterion             = { version = "0.5", features = ["html_reports"] }
indicatif             = { version = "0.17" }
rand_distr            = { version = "0.4" }
tempfile              = { version = "3.10" }
# Benchmark
sqlite                = { version = "0.34" }

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }

[workspace]
members = [
  "tests/sqllogictest",
  "tests/macros-test",
  "fnck_sql_serde_macros",
  "tpcc"]

[profile.release]
lto = true
