[package]
name    = "sqllogictest-test"
version = "0.4.0"
edition = "2021"

[dependencies]
"fnck_sql"      = { path = "../.." }
glob            = { version = "0.3" }
async-trait     = { version = "0.1" }
tokio           = { version = "1.29.1" }
sqllogictest    = { version = "0.14.0" }
tokio-test      = { version = "0.4.2" }
tempfile        = { version = "3.0.7" }
clap            = { version = "4.4.11" }