[package]
name    = "sqllogictest-test"
version = "0.4.0"
edition = "2021"

[dependencies]
"fnck_sql"      = { path = "../.." }
glob            = { version = "0.3.1" }
async-trait     = { version = "0.1.77" }
tokio           = { version = "1.36.0" }
sqllogictest    = { version = "0.14.0" }
tokio-test      = { version = "0.4.3" }
tempfile        = { version = "3.10.1" }
clap            = { version = "4.5.2" }